@@ -1,3 +1,7 @@
+2003-02-26  Frank Belew  <frb@ximian.com>
+
+	* libsoup/Makefile.am: added workaround to link ssl-proxy statically
+
 2003-02-11  Joe Shaw  <joe@ximian.com>
 
 	* configure.in: Bump up to 1.99.8 for snaps.
